# s23_lecture09_txtstats

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  search.js  stats_functions.py  txtstats.html
.github/workflows/: docs.yml  test.yml
tests/: __init__.py  conftest.py  do_not_tests.py  test_api.py  test_cli.py  test_stats_finder.py  test_stats_functions.py
txtstats/: __init__.py  api.py  cli.py  stats_finder.py  stats_functions.py
