[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "txtstats"
version = "0.0.1"
description = "Research software for obtaining text statistics"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["text", "statistics"]
license = {text = "MIT"}
authors = [ { name = "Nuno Fachada", email = "nuno.fachada@ulusofona.pt" } ]
dependencies = [  ]