[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "txtstats"
version = "0.0.1"
description = "Research software for obtaining text statistics"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["text", "statistics"]
license = { text = "MIT" }
authors = [{ name = "Nuno Fachada", email = "nuno.fachada@ulusofona.pt" }]
dependencies = ["tabulate >= 0.9.0"]

[project.optional-dependencies]
devel = [
    "black",
    "flake8",
    "flake8-black",
    "flake8-builtins",
    "flake8-bugbear",
    "flake8-docstrings",
    "flake8-isort",
    "Flake8-pyproject",
    "isort",
    "pre-commit",
]

[project.scripts]
txtstats = "txtstats.cli:_main"

[project.entry-points."txtstats.stats"]
word_count = "txtstats.stats_functions:_word_count"
line_count = "txtstats.stats_functions:_line_count"
char_count = "txtstats.stats_functions:_char_count"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
src_paths = ["txtstats", "tests"]
line_length = 88
skip_gitignore = "True"

[tool.flake8]
max-line-length = 88
max-doc-length = 88
ignore = [
    "E203", # "whitespace before ':'"", but that's how black likes it
    "W503",
] # "line break before binary operator", conflicts with black
exclude = [
    ".git",
    "__pycache__",
    ".*cache",
    "build",
    "dist",
    "env",
    "venv",
    ".eggs",
    "*.egg",
    "docs",
]
docstring-convention = "google" # flake8-docstrings
